--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="level1.js"></script>
 		<script src="keyboard.js"></script>
 		<script src="enemy.js"></script>
+        <script src="bullet.js"></script>
 		<script src="player.js"></script>
 		<script src="main.js"></script>
 		
